--- a/Unit11/SubUnit11.1/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
+++ b/Unit11/SubUnit11.1/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
@@ -1170,17 +1170,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confidence interval from t-distribution: lower bound =  164.5586302035272 , upper bound =  181.0043915118304\n"
+     ]
+    }
+   ],
+   "source": [
+    "lower_t = norm.ppf(.025, loc=rsmean, scale=rsstd)\n",
+    "upper_t = norm.ppf(1-.025, loc=rsmean, scale=rsstd)\n",
+    "print(\"Confidence interval from t-distribution: lower bound = \", lower_t, \", upper bound = \", upper_t)"
+   ]
   },
   {
    "cell_type": "markdown",
